Handle shape distance traveled as double as long as possible to avoid rounding errors. (We are experiencing this when shape_dist_traveled for last stop time is 0.001 greater than total shape dist in some cases)